--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -93,3 +93,15 @@
     -fx-border-width: 0 2 2 2;
     -fx-border-color: rgb(140, 0, 0);
 }
+
+.online {
+    -fx-background-color: #b7db00;
+    -fx-padding: 20px;
+    -fx-border-insets: 20px;
+    -fx-background-insets: 20px;
+}
+
+.onlineUserName {
+    -fx-font-weight: bold;
+    -fx-font-size: 20;
+}
