--- a/views/lobby.fxml
+++ b/views/lobby.fxml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LobbyController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" stylesheets="@../stylesheets/lobby.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LobbyController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -33,9 +35,9 @@
          <children>
             <VBox fx:id="notificationsBox" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #4C4E52;">
                <children>
-                  <AnchorPane maxHeight="30.0" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
+                  <AnchorPane maxHeight="30.0" maxWidth="1.7976931348623157E308" minHeight="80.0" prefHeight="200.0" prefWidth="200.0" styleClass="header">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Notifications" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="5.0">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headerTitle" text="Notifications" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="5.0">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -49,9 +51,9 @@
             </VBox>
             <VBox fx:id="rankingBox" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #4C4E52;" GridPane.columnIndex="2">
                <children>
-                  <AnchorPane maxHeight="30.0" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
+                  <AnchorPane maxHeight="30.0" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" styleClass="header" stylesheets="@../stylesheets/lobby.css">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ranking" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="5.0">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headerTitle" text="Ranking" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="5.0">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -63,7 +65,7 @@
             <FlowPane fx:id="onlinePlayers" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: gray;" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <GridPane style="-fx-background-color: red;">
+      <GridPane styleClass="top">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="40.0" minWidth="40.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -73,20 +75,21 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="BattleShips" GridPane.columnIndex="1" GridPane.valignment="CENTER">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="BattleShips" GridPane.columnIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="34.0" />
                </font>
             </Text>
-            <Text fx:id="userName" strokeType="OUTSIDE" strokeWidth="0.0" text="User Name" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+            <Text fx:id="userName" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="User Name" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
                <font>
                   <Font size="20.0" />
                </font>
             </Text>
          </children>
       </GridPane>
-      <GridPane style="-fx-background-color: #4C4E52;" GridPane.rowIndex="2">
+      <GridPane styleClass="bottom" GridPane.rowIndex="2">
         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -94,11 +97,35 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button minHeight="50.0" minWidth="140.0" mnemonicParsing="false" text="Start Game" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+            <Button minHeight="50.0" minWidth="140.0" mnemonicParsing="false" text="Start Game" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                <GridPane.margin>
                   <Insets right="25.0" />
                </GridPane.margin>
             </Button>
+            <Button fx:id="logoutButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" prefWidth="60.0" styleClass="menuButton">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+               <children>
+                  <Button fx:id="homeButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" prefWidth="60.0" styleClass="menuButton">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="chatButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" prefWidth="60.0" styleClass="menuButton">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="settingsButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" prefWidth="60.0" styleClass="menuButton">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </GridPane>
    </children>
