--- a/views/lobby.fxml
+++ b/views/lobby.fxml
@@ -23,7 +23,7 @@
     <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane GridPane.rowIndex="1">
+      <GridPane fx:id="root" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -102,14 +102,14 @@
                   <Insets right="25.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="logoutButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" prefWidth="60.0" styleClass="menuButton">
+            <Button fx:id="logoutButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#logout" prefWidth="60.0" styleClass="menuButton">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Button fx:id="homeButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" prefWidth="60.0" styleClass="menuButton">
+                  <Button fx:id="homeButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#toHome" prefWidth="60.0" styleClass="menuButton">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -119,7 +119,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="settingsButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" prefWidth="60.0" styleClass="menuButton">
+                  <Button fx:id="settingsButton" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#toSettings" prefWidth="60.0" styleClass="menuButton">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
