--- a/stylesheets/lobby.css
+++ b/stylesheets/lobby.css
@@ -37,7 +37,7 @@
 }
 
 .notification {
-    -fx-background-color: #b7db00;
+    -fx-background-color: #dadada;
     -fx-padding: 2px;
     -fx-border-insets: 2px;
     -fx-background-insets: 2px;
