--- a/stylesheets/lobby.css
+++ b/stylesheets/lobby.css
@@ -1,150 +1,204 @@
 .top {
     -fx-background-color: #1c034c;
+    background-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .bottom {
     -fx-background-color: #1c034c;
+    background-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .header {
     -fx-background-color: #34068a;
+    background-color: #34068a;
     -fx-text-fill: white;
 }
 
 .title {
     -fx-fill: white;
+    fill: white;
 }
 
 .menuButton {
     -fx-background-color: #1c034c;
+    background-color: #1c034c;
 }
 
 .menuButton:hover {
     -fx-background-color: #34068a;
+    background-color: #34068a;
 }
 
 .headerTitle {
     -fx-fill: white;
+    fill: white;
 }
 
 .online {
     -fx-background-color: #b7db00;
+    background-color: #b7db00;
     -fx-padding: 20px;
+    padding: 20px;
     -fx-border-insets: 20px;
     -fx-background-insets: 20px;
 }
 
 .notification {
     -fx-background-color: #dadada;
+    background-color: #dadada;
     -fx-padding: 2px;
+    padding: 2px;
     -fx-border-insets: 2px;
     -fx-background-insets: 2px;
 }
 
 .onlineUserName {
     -fx-font-weight: bold;
+    font-weight: bold;
     -fx-font-size: 20;
+    font-size: 20;
 }
 
 .settings {
     -fx-background-color: GRAY;
+    background-color: GRAY;
 }
 
 .chat {
     -fx-background-color: GRAY;
+    background-color: GRAY;
 }
 
 .logoutButton {
     -fx-background-color: #505050;
+    background-color: #505050;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .logoutButton:hover {
     -fx-background-color: #414141;
+    background-color: #414141;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .deleteButton {
     -fx-background-color: #7e0505;
+    background-color: #7e0505;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .deleteButton:hover {
     -fx-background-color: #720505;
+    background-color: #720505;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .selected {
     -fx-background-color: GRAY;
+    background-color: GRAY;
 }
 
 .selected:hover {
     -fx-background-color: GRAY;
+    background-color: GRAY;
 }
 
 .settingsTitle {
     -fx-fill: white;
+    fill: white;
     -fx-font-size: 28;
+    font-size: 28;
     -fx-font-weight: bold;
+    font-weight: bold;
 }
 
 .settingsText {
     -fx-fill: white;
+    fill: white;
     -fx-font-size: 18;
+    font-size: 18;
 }
 
 .text-field {
     -fx-background-color: #414346;
+    background-color: #414346;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-border-width: 0 0 2 2;
+    border-width: 0 0 2 2;
     -fx-border-color: #1c034c;
+    border-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .text-field:hover {
     -fx-background-color: #383a3d;
+    background-color: #383a3d;
     -fx-border-width: 0 0 3 2;
+    border-width: 0 0 3 2;
     -fx-font-size: 19;
+    font-size: 19;
     -fx-border-color: #1c034c;
+    border-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .text-field:focused {
     -fx-background-color: #383a3d;
+    background-color: #383a3d;
     -fx-border-width: 0 0 3 2;
+    border-width: 0 0 3 2;
     -fx-font-size: 19;
+    font-size: 19;
     -fx-border-color: #1c034c;
+    border-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .send {
     -fx-background-color: #34068a;
+    background-color: #34068a;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .send:hover {
     -fx-background-color: #30057e;
+    background-color: #30057e;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .icon {
     -fx-fill: white;
+    fill: white;
 }
 
 .aa {
     -fx-background-color: #30057e;
+    background-color: #30057e;
 }
