--- a/stylesheets/start.css
+++ b/stylesheets/start.css
@@ -1,95 +1,136 @@
 .background {
     -fx-background-color: #4C4E52;
+    background-color: #4C4E52;
 }
 
 .text-field {
     -fx-background-color: #414346;
+    background-color: #414346;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-border-width: 0 0 2 2;
+    border-width: 0 0 2 2;
     -fx-border-color: #1c034c;
+    border-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .text-field:hover {
     -fx-background-color: #383a3d;
+    background-color: #383a3d;
     -fx-border-width: 0 0 3 2;
+    border-width: 0 0 3 2;
     -fx-font-size: 19;
+    font-size: 19;
     -fx-border-color: #1c034c;
+    border-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .text-field:focused {
     -fx-background-color: #383a3d;
+    background-color: #383a3d;
     -fx-border-width: 0 0 3 2;
+    border-width: 0 0 3 2;
     -fx-font-size: 19;
+    font-size: 19;
     -fx-border-color: #1c034c;
+    border-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .password-field {
     -fx-background-color: #414346;
+    background-color: #414346;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-border-width: 0 0 2 2;
+    border-width: 0 0 2 2;
     -fx-border-color: #1c034c;
+    border-color: #1c034c;
     -fx-text-fill: white;
 }
 
 .loginButton {
     -fx-background-color: #34068a;
+    background-color: #34068a;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .loginButton:hover {
     -fx-background-color: #30057e;
+    background-color: #30057e;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .signupButton {
     -fx-background-color: #34068a;
+    background-color: #34068a;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .signupButton:hover {
     -fx-background-color: #30057e;
+    background-color: #30057e;
     -fx-font-size: 18;
+    font-size: 18;
     -fx-font-weight: 1.1;
+    font-weight: 1.1;
     -fx-text-fill: white;
 }
 
 .hyperlink {
     -fx-text-fill: #c3a2ff;
     -fx-font-weight: bold;
+    font-weight: bold;
     -fx-underline: false;
     -fx-font-size: 14;
+    font-size: 14;
 }
 
 .hyperlink:hover {
     -fx-text-fill: rgb(138, 105, 199);
     -fx-font-weight: bold;
+    font-weight: bold;
     -fx-underline: true;
     -fx-font-size: 14;
+    font-size: 14;
 }
 
 .invalid {
     -fx-border-width: 0 2 2 2;
+    border-width: 0 2 2 2;
     -fx-border-color: rgb(140, 0, 0);
+    border-color: rgb(140, 0, 0);
 }
 
 .errortext {
     -fx-background-color: #172500;
+    background-color: #172500;
     -fx-fill: rgb(170, 23, 23);
+    fill: rgb(170, 23, 23);
 
     -fx-font-weight: bold;
+    font-weight: bold;
     -fx-font-size: 18;
+    font-size: 18;
 }
 
 .invalid:hover {
     -fx-border-width: 0 2 2 2;
+    border-width: 0 2 2 2;
     -fx-border-color: rgb(140, 0, 0);
+    border-color: rgb(140, 0, 0);
 }
